quarkus/DemsAdapter/target/kubernetes/openshift.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 22bf1158618de04d6edf397796778fc223128571
    app.quarkus.io/build-timestamp: 2023-06-27 - 23:49:10 +0000
  labels:
    app.kubernetes.io/name: quarkus-dems-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-dems-adapter
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: quarkus-dems-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 22bf1158618de04d6edf397796778fc223128571
        app.quarkus.io/build-timestamp: 2023-06-27 - 23:49:10 +0000
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: quarkus-dems-adapter
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_OPTIONS
              value: ""
            - name: SMALLRYE_CONFIG_LOCATIONS
              value: /mnt/app-secret
            - name: DEMS_ADAPTER_SECRET_TOKEN
              valueFrom:
                secretKeyRef:
                  key: dems-adapter-secret-token
                  name: ccm-secrets
            - name: DEMS_SECURITY_TOKEN
              valueFrom:
                secretKeyRef:
                  key: dems-security-token
                  name: ccm-secrets
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
          image: vicgu/quarkus-dems-adapter:1.0-SNAPSHOT
          imagePullPolicy: Always
          name: quarkus-dems-adapter
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/app-secret
              name: app-secret
              readOnly: false
      volumes:
        - name: app-secret
          secret:
            optional: false
            secretName: ccm-secrets
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - quarkus-dems-adapter
        from:
          kind: ImageStreamTag
          name: quarkus-dems-adapter:1.0-SNAPSHOT
      type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 22bf1158618de04d6edf397796778fc223128571
    app.quarkus.io/build-timestamp: 2023-06-27 - 23:49:10 +0000
  labels:
    app.kubernetes.io/name: quarkus-dems-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-dems-adapter
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-dems-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 22bf1158618de04d6edf397796778fc223128571
    app.quarkus.io/build-timestamp: 2023-06-27 - 23:49:10 +0000
  labels:
    app.kubernetes.io/name: quarkus-dems-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-dems-adapter
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: quarkus-dems-adapter
